--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "url": "https://github.com/nearinfinity/node-bplist-parser.git"
   },
   "dependencies": {
-    "big-integer": "^1.6.47",
-    "buffer": "^5.6.0"
+    "big-integer": "^1.6.47"
   }
 }
